# polygon_burning_figures

./: Cargo.toml
src/: main.rs
