[package]
name = "burn_simple_polygon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.28.0"
image = "0.25.1"
itertools = "0.13.0"
plotters = "0.3.6"
serde = { version = "1.0.203", features=["derive"] }
serde_json = "1.0.117"
